# serializer version: 1
# name: test_parse_albums[spec.album]
  dict({
    'album_type': 'unknown',
    'artists': list([
      dict({
        'available': True,
        'external_ids': list([
        ]),
        'image': None,
        'is_playable': True,
        'item_id': '91c3901ac465b9efc439e4be4270c2b6',
        'media_type': 'artist',
        'name': 'pornophonique',
        'provider': 'xx-instance-id-xx',
        'sort_name': 'pornophonique',
        'translation_key': None,
        'uri': 'xx-instance-id-xx://artist/91c3901ac465b9efc439e4be4270c2b6',
        'version': '',
      }),
    ]),
    'external_ids': list([
    ]),
    'favorite': True,
    'is_playable': True,
    'item_id': 'ad0f112b6dcf83de5e9cae85d07f0d35',
    'media_type': 'album',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': None,
      'explicit': None,
      'genres': None,
      'images': list([
        dict({
          'path': 'al-ad0f112b6dcf83de5e9cae85d07f0d35_640a93a8',
          'provider': 'xx-instance-id-xx',
          'remotely_accessible': False,
          'type': 'thumb',
        }),
      ]),
      'label': None,
      'languages': None,
      'last_refresh': None,
      'links': None,
      'lrc_lyrics': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': None,
      'preview': None,
      'release_date': None,
      'review': None,
      'style': None,
    }),
    'name': '8-bit lagerfeuer',
    'position': None,
    'provider': 'opensubsonic',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'codec_type': '?',
          'content_type': '?',
          'output_format_str': '?',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'item_id': 'ad0f112b6dcf83de5e9cae85d07f0d35',
        'provider_domain': 'opensubsonic',
        'provider_instance': 'xx-instance-id-xx',
        'url': None,
      }),
    ]),
    'sort_name': '8-bit lagerfeuer',
    'translation_key': None,
    'uri': 'opensubsonic://album/ad0f112b6dcf83de5e9cae85d07f0d35',
    'version': '',
    'year': 2007,
  })
# ---
# name: test_parse_albums[spec.album].1
  dict({
    'album_type': 'unknown',
    'artists': list([
      dict({
        'available': True,
        'external_ids': list([
        ]),
        'image': None,
        'is_playable': True,
        'item_id': '91c3901ac465b9efc439e4be4270c2b6',
        'media_type': 'artist',
        'name': 'pornophonique',
        'provider': 'xx-instance-id-xx',
        'sort_name': 'pornophonique',
        'translation_key': None,
        'uri': 'xx-instance-id-xx://artist/91c3901ac465b9efc439e4be4270c2b6',
        'version': '',
      }),
    ]),
    'external_ids': list([
    ]),
    'favorite': True,
    'is_playable': True,
    'item_id': 'ad0f112b6dcf83de5e9cae85d07f0d35',
    'media_type': 'album',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': 'Download the full release here (creative commons). These cripsy beats are ripe with thumping funk and techno influences, sample wizardry and daring shuffles. Composed with the help of unique sound plugins which were especially programmed to measure Comfort Fit’s needs and wishes, we think the chances aren’t bad that you’ll fall for the unique sound signature, bounce and elegance of this unusual Hip Hop production. Ltj bukem / Good looking Rec., UK: "Really love this music." Velanche / XLR8R, UK: "Awesome job he\'s done... overall production is dope." Kwesi / BBE Music, UK: "Wooooooowwwww... WHAT THE FUCK! THIS IS WHAT',
      'explicit': None,
      'genres': None,
      'images': list([
        dict({
          'path': 'al-ad0f112b6dcf83de5e9cae85d07f0d35_640a93a8',
          'provider': 'xx-instance-id-xx',
          'remotely_accessible': False,
          'type': 'thumb',
        }),
        dict({
          'path': 'http://localhost:8989/play/art/0f8c3cbd6b0b22c3b5402141351ac812/album/21/thumb34.jpg',
          'provider': 'xx-instance-id-xx',
          'remotely_accessible': False,
          'type': 'thumb',
        }),
      ]),
      'label': None,
      'languages': None,
      'last_refresh': None,
      'links': None,
      'lrc_lyrics': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': None,
      'preview': None,
      'release_date': None,
      'review': None,
      'style': None,
    }),
    'name': '8-bit lagerfeuer',
    'position': None,
    'provider': 'opensubsonic',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'codec_type': '?',
          'content_type': '?',
          'output_format_str': '?',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'item_id': 'ad0f112b6dcf83de5e9cae85d07f0d35',
        'provider_domain': 'opensubsonic',
        'provider_instance': 'xx-instance-id-xx',
        'url': None,
      }),
    ]),
    'sort_name': '8-bit lagerfeuer',
    'translation_key': None,
    'uri': 'opensubsonic://album/ad0f112b6dcf83de5e9cae85d07f0d35',
    'version': '',
    'year': 2007,
  })
# ---
# name: test_parse_artists[spec-artistid3.artist]
  dict({
    'external_ids': list([
    ]),
    'favorite': True,
    'is_playable': True,
    'item_id': '37ec820ca7193e17040c98f7da7c4b51',
    'media_type': 'artist',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': None,
      'explicit': None,
      'genres': None,
      'images': list([
        dict({
          'path': 'ar-37ec820ca7193e17040c98f7da7c4b51_0',
          'provider': 'xx-instance-id-xx',
          'remotely_accessible': False,
          'type': 'thumb',
        }),
      ]),
      'label': None,
      'languages': None,
      'last_refresh': None,
      'links': None,
      'lrc_lyrics': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': None,
      'preview': None,
      'release_date': None,
      'review': None,
      'style': None,
    }),
    'name': '2 Mello',
    'position': None,
    'provider': 'opensubsonic',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'codec_type': '?',
          'content_type': '?',
          'output_format_str': '?',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'item_id': '37ec820ca7193e17040c98f7da7c4b51',
        'provider_domain': 'opensubsonic',
        'provider_instance': 'xx-instance-id-xx',
        'url': None,
      }),
    ]),
    'sort_name': '2 mello',
    'translation_key': None,
    'uri': 'opensubsonic://artist/37ec820ca7193e17040c98f7da7c4b51',
    'version': '',
  })
# ---
# name: test_parse_artists[spec-artistid3.artist].1
  dict({
    'external_ids': list([
    ]),
    'favorite': True,
    'is_playable': True,
    'item_id': '37ec820ca7193e17040c98f7da7c4b51',
    'media_type': 'artist',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': 'Empty biography',
      'explicit': None,
      'genres': None,
      'images': list([
        dict({
          'path': 'ar-37ec820ca7193e17040c98f7da7c4b51_0',
          'provider': 'xx-instance-id-xx',
          'remotely_accessible': False,
          'type': 'thumb',
        }),
        dict({
          'path': 'http://localhost:8989/play/art/f20070e8e11611cc53542a38801d60fa/artist/2/thumb34.jpg',
          'provider': 'xx-instance-id-xx',
          'remotely_accessible': True,
          'type': 'thumb',
        }),
      ]),
      'label': None,
      'languages': None,
      'last_refresh': None,
      'links': None,
      'lrc_lyrics': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': None,
      'preview': None,
      'release_date': None,
      'review': None,
      'style': None,
    }),
    'name': '2 Mello',
    'position': None,
    'provider': 'opensubsonic',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'codec_type': '?',
          'content_type': '?',
          'output_format_str': '?',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'item_id': '37ec820ca7193e17040c98f7da7c4b51',
        'provider_domain': 'opensubsonic',
        'provider_instance': 'xx-instance-id-xx',
        'url': None,
      }),
    ]),
    'sort_name': '2 mello',
    'translation_key': None,
    'uri': 'opensubsonic://artist/37ec820ca7193e17040c98f7da7c4b51',
    'version': '',
  })
# ---
# name: test_parse_artists[spec-sample.artist]
  dict({
    'external_ids': list([
    ]),
    'favorite': True,
    'is_playable': True,
    'item_id': '100000002',
    'media_type': 'artist',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': None,
      'explicit': None,
      'genres': None,
      'images': list([
        dict({
          'path': 'ar-100000002',
          'provider': 'xx-instance-id-xx',
          'remotely_accessible': False,
          'type': 'thumb',
        }),
      ]),
      'label': None,
      'languages': None,
      'last_refresh': None,
      'links': None,
      'lrc_lyrics': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': None,
      'preview': None,
      'release_date': None,
      'review': None,
      'style': None,
    }),
    'name': 'Synthetic',
    'position': None,
    'provider': 'opensubsonic',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'codec_type': '?',
          'content_type': '?',
          'output_format_str': '?',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'item_id': '100000002',
        'provider_domain': 'opensubsonic',
        'provider_instance': 'xx-instance-id-xx',
        'url': None,
      }),
    ]),
    'sort_name': 'synthetic',
    'translation_key': None,
    'uri': 'opensubsonic://artist/100000002',
    'version': '',
  })
# ---
# name: test_parse_artists[spec-sample.artist].1
  dict({
    'external_ids': list([
    ]),
    'favorite': True,
    'is_playable': True,
    'item_id': '100000002',
    'media_type': 'artist',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': 'Empty biography',
      'explicit': None,
      'genres': None,
      'images': list([
        dict({
          'path': 'ar-100000002',
          'provider': 'xx-instance-id-xx',
          'remotely_accessible': False,
          'type': 'thumb',
        }),
        dict({
          'path': 'http://localhost:8989/play/art/f20070e8e11611cc53542a38801d60fa/artist/2/thumb34.jpg',
          'provider': 'xx-instance-id-xx',
          'remotely_accessible': True,
          'type': 'thumb',
        }),
      ]),
      'label': None,
      'languages': None,
      'last_refresh': None,
      'links': None,
      'lrc_lyrics': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': None,
      'preview': None,
      'release_date': None,
      'review': None,
      'style': None,
    }),
    'name': 'Synthetic',
    'position': None,
    'provider': 'opensubsonic',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'codec_type': '?',
          'content_type': '?',
          'output_format_str': '?',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'item_id': '100000002',
        'provider_domain': 'opensubsonic',
        'provider_instance': 'xx-instance-id-xx',
        'url': None,
      }),
    ]),
    'sort_name': 'synthetic',
    'translation_key': None,
    'uri': 'opensubsonic://artist/100000002',
    'version': '',
  })
# ---
